# lol_dht22

./: CMakeLists.txt  README
cmake/Modules/: FindWiringPi.cmake
